@@ -103,9 +103,7 @@ tools/expack.exe : tools/expack.o $(FILE_OBJS)
 	$(CXX) $(LFLAGS) -o tools/expack.exe tools/expack.o $(FILE_OBJS) $(LIBS)
 
 data/exult.flx: tools/expack.exe $(EXULT_FLX_OBJECTS)
-	cd data
-	../tools/expack.exe -i flx.in
-	cd ..
+	tools/expack.exe -i data/flx.in
 
 exultico.o: win32/exultico.rc win32/exult.ico
 	windres win32/exultico.rc exultico.o
